# whatalesyou

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  cypress.config.ts  docker-compose.yml  heroku.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/: Dockerfile  Procfile  manage.py  package-lock.json  package.json  pyproject.toml
backend/brew_log/: admin.py  apps.py  models.py  serializers.py  views.py
backend/brew_log/migrations/: 0001_initial.py  0002_alter_brewlog_brew_date.py  0002_initial.py
backend/brew_settings/: apps.py  models.py  serializers.py  views.py
backend/brew_settings/migrations/: 0001_initial.py  0002_initial.py  0003_rename_user_brewsetting_owner.py
backend/recipes/: admin.py  models.py  serializers.py  views.py
backend/recipes/migrations/: 0001_initial.py  0002_alter_chemistry_recipe_alter_culture_recipe_and_more.py  0002_initial.py  0003_alter_chemistry_notes_alter_chemistry_timing_and_more.py
backend/shared/: models.py
backend/user/: models.py  serializers.py  services.py  views.py
backend/user/migrations/: 0001_initial.py  0002_alter_user_username.py  0002_user_is_verified_user_verification_code.py  0003_alter_user_managers.py
backend/user_profiles/: models.py  serializers.py  views.py
backend/user_profiles/migrations/: 0001_initial.py  0002_userprofile_batch_size_userprofile_boil_time_and_more.py  0003_alter_userprofile_user.py
backend/whatalesyou/: asgi.py  settings.py  urls.py
brew_log/: apps.py  models.py  serializers.py  views.py
brew_settings/: admin.py  models.py
(+146 files in other folders)
